# grid-trading-bot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
src/grid_trading_bot/: __init__.py  __main__.py  backtest.py  cli.py  config.py  exchange.py  grid.py  metrics.py  models.py
tests/unit/: test_backtest.py  test_backtest_report.py  test_cli.py  test_config.py  test_exchange.py  test_geometric_grid.py  test_grid.py  test_metrics.py  test_risk_controls.py
