[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grid-trading-bot"
version = "0.2.0"
description = "Grid trading bot with a configurable price grid, simulated exchange, and backtest — by Viprasol Tech."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
  "grid-trading-bot",
  "grid-trading",
  "trading-bot",
  "crypto",
  "backtesting",
  "python",
  "automated-trading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pydantic>=2.6", "typer>=0.12", "rich>=13.7", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
grid-trading-bot = "grid_trading_bot.cli:app"

[project.urls]
Homepage = "https://viprasol.com"
Repository = "https://github.com/Viprasol-Tech/grid-trading-bot"
Issues = "https://github.com/Viprasol-Tech/grid-trading-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_trading_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C4"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
